--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-operators/resources
+operators/gui/resources
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
