--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ shiboken6 = "6.9.0"
 typing-extensions = "4.13.2"
 urllib3 = "2.4.0"
 yarl = "1.20.0"
+loguru = "^0.7.3"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
