--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ aiosignal = "1.3.2"
 altgraph = "0.17.4"
 async-timeout = "5.0.1"
 attrs = "25.3.0"
-certifi = "2025.4.26"
+certifi = "^2025.6.15"
 charset-normalizer = "3.4.2"
 frozenlist = "1.6.0"
 idna = "3.10"
@@ -30,10 +30,11 @@ pywin32-ctypes = "0.2.3"
 qasync = "0.27.1"
 requests = "2.32.3"
 shiboken6 = "6.9.0"
-typing-extensions = "4.13.2"
-urllib3 = "2.4.0"
+typing-extensions = "^4.14.0"
+urllib3 = "2.5.0"
 yarl = "1.20.0"
 loguru = "^0.7.3"
+selenium = "^4.34.2"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
