--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ urllib3 = "2.5.0"
 yarl = "1.20.0"
 loguru = "^0.7.3"
 selenium = "^4.34.2"
+python-dotenv = "^1.1.1"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
