fix: Update logger and robot configurations

--- a/operators/robots/robot_knp/config.json
+++ b/operators/robots/robot_knp/config.json
@@ -1,11 +1,11 @@
 {
     "headless": false,
-    "start_url": "https://knp.kgd.gov.kz/",
+    "start_url": "https://cabinet.kgd.gov.kz/knp/main/index",
     "user_agent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/120.0.0.0 Safari/537.36",
     "proxy": null,
     "window_size": [1920, 1080],
     "viewport_size": [1920, 1080],
-    "disable_images": false,
+    "disable_images": true,
     "disable_javascript": false,
     "page_load_timeout": 30,
     "implicit_wait": 10,
@@ -32,7 +32,8 @@
     "prefs": {
         "profile.default_content_setting_values.notifications": 2,
         "profile.default_content_settings.popups": 0,
-        "profile.managed_default_content_settings.images": 1,
+        "profile.managed_default_content_settings.images": 2,
+        "profile.managed_default_content_settings.javascript": 1,
         "profile.content_settings.exceptions.automatic_downloads.*.setting": 1,
         "profile.default_content_setting_values.automatic_downloads": 1,
         "profile.default_content_setting_values.plugins": 1,
