feat: add path to certificate; call select_certificate method

--- a/operators/robots/robot_knp/config.json
+++ b/operators/robots/robot_knp/config.json
@@ -46,5 +46,6 @@
     "experimental_options": {
         "excludeSwitches": ["enable-automation"],
         "useAutomationExtension": false
-    }
+    },
+    "eds_folder": "path/to/eds/folder"
 }
