fix: Updated correct eds_folder path; extract_password_from_folder_name returns None if no password found

--- a/operators/robots/robot_knp/config.json
+++ b/operators/robots/robot_knp/config.json
@@ -47,5 +47,5 @@
         "excludeSwitches": ["enable-automation"],
         "useAutomationExtension": false
     },
-    "eds_folder": "path/to/eds/folder"
+    "eds_folder": "path\\to\\eds\\folder"
 }
