update: poetry.lock and pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ PySide6 = "6.9.0"
 PySide6-Addons = "6.9.0"
 PySide6-Essentials = "6.9.0"
 pywin32-ctypes = "0.2.3"
+pyqt5 = "^5.15.11"
 qasync = "0.27.1"
 requests = "2.32.3"
 shiboken6 = "6.9.0"
